[package]
authors = ["Harald Niesche <harald@niesche.de>"]
edition = "2018"
name = "greatest-predictor"
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
regex = "1.4.3"
reqwest = "0.11.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.csv]
version = "1.1.5"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.tokio]
features = ["full"]
version = "1.1.1"
